# PassengerCounter

./: .gitignore  CMakeLists.txt  PCN.cpp  PCN.h  README.md  X-COMPILE-OCV  main.cpp  passenger.cpp  passenger.h
