cmake_minimum_required(VERSION 2.8)
project( PCN )
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pthread -std=gnu++0x")
find_package( OpenCV REQUIRED )
find_package( OpenGL REQUIRED )
set(DEPENDENCIES ${OPENGL_LIBRARIES})
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( PCN main.cpp )
target_link_libraries( PCN ${OpenCV_LIBS} ${DEPENDENCIES} X11)
